# file-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  build.gradle  settings.gradle
ftlib/: .gitignore  ftlib.c  stub.txt
src/: FileTracer.cpp  FileTracer.hpp  hello_world_app.cpp  hello_world_app.h
src/Models/: file_info.h
src/UI/: MainWindow.cpp  MainWindow.h  MainWindow.hpp
src/Utils/: constants.h
src/main/java/: module-info.java
src/main/java/net/davoleo/filetracer/: FileTableManager.java  FileTracer.java  Main.java
src/main/java/net/davoleo/filetracer/model/: FileCategories.java  TracedFile.java
src/main/resources/gui/: main.fxml
